@@ -24,39 +24,68 @@ import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
+/**
+ * Superclass for the loading and storing of domain configuration instances.
+ *
+ * @param <T> The type of domain configuration class.
+ */
 public abstract class DomainConfigCache <T extends DomainConfig> {
 
     private static final String DEFAULT_FILE_ENCODING = "UTF-8";
     private static final Logger logger = LoggerFactory.getLogger(DomainConfigCache.class);
 
     @Autowired
-    private ApplicationConfig appConfig = null;
+    ApplicationConfig appConfig = null;
 
-    private ConcurrentHashMap<String, T> domainConfigs = new ConcurrentHashMap<>();
+    private final ConcurrentHashMap<String, T> domainConfigs = new ConcurrentHashMap<>();
     private final T undefinedDomainConfig;
-    private ExtensionFilter propertyFilter = new ExtensionFilter(".properties");
+    private final ExtensionFilter propertyFilter = new ExtensionFilter(".properties");
 
+    /**
+     * Constructor.
+     */
     public DomainConfigCache() {
         undefinedDomainConfig = newDomainConfig();
         undefinedDomainConfig.setDefined(false);
     }
 
+    /**
+     * @return A newly created and empty domain configuration instance.
+     */
     protected abstract T newDomainConfig();
+
+    /**
+     * @return The set of supported channels for this validator.
+     */
     protected abstract ValidatorChannel[] getSupportedChannels();
 
+    /**
+     * Initialisation method to load all domain configurations.
+     *
+     * Additional customisations can be included by overriding the init() method.
+     */
     @PostConstruct
     public void initBase() {
         getAllDomainConfigurations();
         init();
     }
 
+    /**
+     * Extension point (by default empty) to do additional configuration if needed.
+     */
     protected void init() {
     }
 
+    /**
+     * @return The default set of supported channels for this type of validator.
+     */
     protected ValidatorChannel[] getDefaultChannels() {
         return getSupportedChannels();
     }
 
+    /**
+     * @return A text representation of the supported validator channels.
+     */
     private String getDefaultChannelsStr() {
         StringBuilder str = new StringBuilder();
         ValidatorChannel[] defaultChannels = getDefaultChannels();
@@ -69,6 +98,11 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return str.toString();
     }
 
+    /**
+     * Initialise (once) and return all domain configurations for this validator.
+     *
+     * @return The domain configurations.
+     */
     public List<T> getAllDomainConfigurations() {
         List<T> configs = new ArrayList<>();
         for (String domain: appConfig.getDomain()) {
@@ -80,6 +114,12 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return configs;
     }
 
+    /**
+     * Get a domain configuration by its public name.
+     *
+     * @param domainName The domain's name.
+     * @return The domain configuration.
+     */
     public T getConfigForDomainName(String domainName) {
         T config = getConfigForDomain(appConfig.getDomainNameToDomainId().getOrDefault(domainName, ""));
         if (config == null) {
@@ -88,6 +128,12 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return config;
     }
 
+    /**
+     * Get a domain configuration by its identifier (folder name).
+     *
+     * @param domain The domain identifier.
+     * @return The domain configuration.
+     */
     public T getConfigForDomain(String domain) {
         T domainConfig = domainConfigs.get(domain);
         if (domainConfig == null) {
@@ -185,6 +231,12 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return domainConfig;
     }
 
+    /**
+     * Import any additional properties from other property files (if allowed).
+     *
+     * @param config The loaded configuration properties.
+     * @param domain The current domain's identifier.
+     */
     protected void importAdditionalProperties(CompositeConfiguration config, String domain) {
     	String importPropertiesObject = config.getString("validator.importProperties", null);
     	if(importPropertiesObject == null) {
@@ -201,6 +253,12 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         addConfigurationFromFile(Paths.get(importPropertiesPath), config);
     }
 
+    /**
+     * Load the configuration from the provided file.
+     *
+     * @param fileToAdd The file to load.
+     * @param aggregateConfiguration The configuration to enrich.
+     */
     private void addConfigurationFromFile(Path fileToAdd, CompositeConfiguration aggregateConfiguration) {
         PropertiesConfiguration propertiesConfig = new PropertiesConfiguration();
         FileHandler fileHandler = new FileHandler(propertiesConfig);
@@ -214,20 +272,37 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         aggregateConfiguration.addConfiguration(propertiesConfig);
     }
 
+    /**
+     * Check to see if the provided file path (relative or absolute) is within the given domain's folder.
+     *
+     * @param domain The domain's identifier (folder name).
+     * @param localFile The file path to check.
+     * @return True if the file is within the domain's folder (or one of its sub-folders).
+     */
     public boolean isInDomainFolder(String domain, String localFile) {
     	Path domainRootPath = Paths.get(appConfig.getResourceRoot(), domain);
-    	Path localFilePath = Paths.get(appConfig.getResourceRoot(), domain, localFile.trim());
-    	Path domaniRootCanonicalPath;
+        Path localFilePath;
+    	if (Path.of(localFile).isAbsolute()) {
+            localFilePath = Path.of(localFile);
+        } else {
+            localFilePath = Paths.get(appConfig.getResourceRoot(), domain, localFile.trim());
+        }
+    	Path domainRootCanonicalPath;
     	Path localFileCanonicalPath;
 		try {
-			domaniRootCanonicalPath = domainRootPath.toFile().getCanonicalFile().toPath();
+			domainRootCanonicalPath = domainRootPath.toFile().getCanonicalFile().toPath();
 			localFileCanonicalPath = localFilePath.toFile().getCanonicalFile().toPath();
-			return localFileCanonicalPath.startsWith(domaniRootCanonicalPath);
+			return localFileCanonicalPath.startsWith(domainRootCanonicalPath);
 		} catch (IOException e) {
 			throw new ValidatorException("Unable to find domain properties file" + localFile, e);
 		}
     }
-	
+
+    /**
+     * Complete the configuration of validation artifacts (aggregate flags) based on the loaded configuration.
+     *
+     * @param domainConfig The domain's configuration.
+     */
     protected void completeValidationArtifactConfig(T domainConfig) {
         if (domainConfig.getArtifactInfo() != null) {
             for (String validationType: domainConfig.getType()) {
@@ -249,10 +324,24 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         }
     }
 
+    /**
+     * Enrich the domain's configuration using the provided properties (does nothing by default).
+     *
+     * @param domainConfig The domain configuration to enrich.
+     * @param config The configuration properties to consider.
+     */
     protected void addDomainConfiguration(T domainConfig, Configuration config) {
         // Do nothing by default.
     }
 
+    /**
+     * Get the validator channel that corresponds to the provided name.
+     *
+     * @param supportedChannels The set of supported channels.
+     * @param channelName The name of the channel to return.
+     * @return The matched channel.
+     * @throws IllegalStateException if no channel could be matched.
+     */
     protected ValidatorChannel toValidatorChannel(Set<ValidatorChannel> supportedChannels, String channelName) {
         ValidatorChannel channel = ValidatorChannel.byName(channelName);
         if (!supportedChannels.contains(channel)) {
@@ -261,13 +350,22 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return channel;
     }
 
+    /**
+     * Parse a list of objects using a helper function.
+     *
+     * @param key The common key to consider.
+     * @param config The configuration properties.
+     * @param fnMapper The mapper function.
+     * @param <R> The object type.
+     * @return The list of objects.
+     */
     protected <R> List<R> parseValueList(String key, Configuration config, Function<Map<String, String>, R> fnMapper) {
         List<R> values = new ArrayList<>();
         Iterator<String> it = config.getKeys(key);
         Set<String> processedIndexes = new HashSet<>();
         while (it.hasNext()) {
             String typedKey = it.next();
-            String index = typedKey.replaceAll("(" + key + ".)([0-9]{1,})(.[a-zA-Z]*)", "$2");
+            String index = typedKey.replaceAll("(" + key + ".)([0-9]{1,})(.[a-zA-Z0-9]*)", "$2");
             if (!processedIndexes.contains(index)) {
                 processedIndexes.add(index);
                 Map<String, String> propertiesToMap = new HashMap<>();
@@ -283,6 +381,16 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return values;
     }
 
+    /**
+     * Parse a map of validation type to list of objects using a helper function.
+     *
+     * @param key The common property key.
+     * @param types The validation types.
+     * @param config The configuration properties.
+     * @param fnMapper The mapper function.
+     * @param <R> The type of object to return within the lists.
+     * @return The map.
+     */
     protected <R> Map<String, List<R>> parseTypedValueList(String key, List<String> types, Configuration config, Function<Map<String, String>, R> fnMapper) {
         Map<String, List<R>> configValues = new HashMap<>();
         for (String type: types) {
@@ -291,6 +399,15 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return configValues;
     }
 
+    /**
+     * Parse a map of boolean values per validation type.
+     *
+     * @param key The common property key.
+     * @param config The configuration properties.
+     * @param types The validation types.
+     * @param defaultIfMissing The default value for missing properties.
+     * @return The map.
+     */
     protected Map<String, Boolean> parseBooleanMap(String key, Configuration config, List<String> types, boolean defaultIfMissing) {
         Map<String, Boolean> map = new HashMap<>();
         for (String type: types) {
@@ -305,6 +422,15 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return map;
     }
 
+    /**
+     * Parse a map of validation type to characters.
+     *
+     * @param key The common property key.
+     * @param config The configuration properties.
+     * @param types The validation types.
+     * @param defaultIfMissing The default character for missing entries.
+     * @return The map.
+     */
     protected Map<String, Character> parseCharacterMap(String key, Configuration config, List<String> types, char defaultIfMissing) {
         Map<String, Character> map = new HashMap<>();
         for (String type: types) {
@@ -319,10 +445,29 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return map;
     }
 
+    /**
+     * Parse a map of validation type to boolean values.
+     *
+     * @param key The common property key.
+     * @param config The configuration properties.
+     * @param types The validation types.
+     * @return The map (using false for missing entries).
+     */
     protected Map<String, Boolean> parseBooleanMap(String key, Configuration config, List<String> types) {
         return parseBooleanMap(key, config, types, false);
     }
 
+    /**
+     * Parse a map of validation type to enum instance.
+     *
+     * @param key The common property key.
+     * @param enumType The class of the enum.
+     * @param defaultValue The default enum value for missing entries.
+     * @param config The configuration properties.
+     * @param types The validation types.
+     * @param <R> The class of the enum.
+     * @return The map.
+     */
     protected <R extends Enum<R>> Map<String, R> parseEnumMap(String key, Class<R> enumType, R defaultValue, Configuration config, List<String> types) {
         Map<String, R> map = new HashMap<>();
         for (String type: types) {
@@ -331,6 +476,15 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return map;
     }
 
+    /**
+     * Parse a map of validation type to arbitrary objects.
+     *
+     * @param commonKey The common property key.
+     * @param config The configuration properties.
+     * @param fnObjectBuilder The mapper function to construct objects.
+     * @param <R> The type of each object.
+     * @return The map.
+     */
     protected <R> Map<String, R> parseObjectMap(String commonKey, Configuration config, BiFunction<String, Map<String, String>, R> fnObjectBuilder) {
         Map<String, R> map = new HashMap<>();
         Iterator<String> mapKeys = config.getKeys(commonKey);
@@ -352,6 +506,17 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return map;
     }
 
+    /**
+     * Parse a map of validation type to map of enums.
+     *
+     * @param key The common property key.
+     * @param defaultValue The default enum to use for missing entries.
+     * @param config The configuration properties.
+     * @param types The validation types.
+     * @param fnEnumBuilder The function used to construct the map of enums. The key is the part following the validation type.
+     * @param <R> The type of the enums.
+     * @return The map.
+     */
     protected <R extends Enum<R>> Map<String, R> parseEnumMap(String key, R defaultValue, Configuration config, List<String> types, Function<String,R> fnEnumBuilder) {
         Map<String, R> map = new HashMap<>();
         for (String type: types) {
@@ -364,6 +529,13 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return map;
     }
 
+    /**
+     * Parse a map of strings.
+     *
+     * @param commonKey The common key part. The remaining part will be the map's keys.
+     * @param config The configuration properties.
+     * @return The map.
+     */
     protected Map<String, String> parseMap(String commonKey, Configuration config) {
         Map<String, String> map = new HashMap<>();
         Iterator<String> mapKeys = config.getKeys(commonKey);
@@ -375,6 +547,12 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return map;
     }
 
+    /**
+     * Add missing values to the provided map.
+     *
+     * @param map The map to complete.
+     * @param defaultValues The map of default values to use.
+     */
     protected void addMissingDefaultValues(Map<String, String> map, Map<String, String> defaultValues) {
         if (defaultValues != null) {
             for (Map.Entry<String, String> defaultEntry: defaultValues.entrySet()) {
@@ -385,6 +563,14 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         }
     }
 
+    /**
+     * Parse a map of strings.
+     *
+     * @param commonKey The common property key.
+     * @param config The configuration properties.
+     * @param defaultValues The map of default values to consider for missing entries.
+     * @return The map.
+     */
     protected Map<String, String> parseMap(String commonKey, Configuration config, Map<String, String> defaultValues) {
         Map<String, String> map = new HashMap<>();
         Iterator<String> mapKeys = config.getKeys(commonKey);
@@ -398,6 +584,14 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return map;
     }
 
+    /**
+     * Parse a map of strings.
+     *
+     * @param key The common key part.
+     * @param config The configuration properties.
+     * @param subKeys The set of sub-keys after the common part to be used as the map's keys.
+     * @return The map.
+     */
     protected Map<String, String> parseMap(String key, Configuration config, List<String> subKeys) {
         Map<String, String> map = new HashMap<>();
         for (String subKey: subKeys) {
@@ -409,6 +603,16 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         return map;
     }
 
+    /**
+     * Parse all validation artifact information for the provided validation type.
+     *
+     * @param artifactType The artifact type.
+     * @param rootKey The common key part.
+     * @param externalRootKey The common key part linked to external artifacts' configuration.
+     * @param externalCombinationKey The key part for the combination approach (default is combinationApproach).
+     * @param domainConfig The domain configuration to enrich.
+     * @param config The configuration properties.
+     */
     protected void addValidationArtifactInfoForType(String artifactType, String rootKey, String externalRootKey, String externalCombinationKey, DomainConfig domainConfig, Configuration config) {
         if (domainConfig.getArtifactInfo() == null) {
             domainConfig.setArtifactInfo(new HashMap<>());
@@ -420,7 +624,7 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
             info.setLocalPath(StringUtils.trim(config.getString(typeKey)));
             info.setType(StringUtils.trim(config.getString(typeKey+".type")));
             info.setPreProcessorPath(StringUtils.trim(config.getString(typeKey+".preprocessor")));
-            info.setPreProcessorPath(StringUtils.trim(config.getString(typeKey+".preprocessor.output")));
+            info.setPreProcessorOutputExtension(StringUtils.trim(config.getString(typeKey+".preprocessor.output")));
             info.setRemoteArtifacts(new ArrayList<>());
             // Lookup remote artifact info.
             int remoteCounter = 0;
@@ -429,7 +633,7 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
                 remoteInfo.setUrl(config.getString(StringUtils.trim(typeKey+".remote."+remoteCounter+".url")));
                 remoteInfo.setType(StringUtils.trim(config.getString(typeKey+".remote."+remoteCounter+".type")));
                 remoteInfo.setPreProcessorPath(StringUtils.trim(config.getString(typeKey+".remote."+remoteCounter+".preprocessor")));
-                remoteInfo.setPreProcessorOutputExtension(StringUtils.trim(config.getString(typeKey+".remote."+remoteCounter+".output")));
+                remoteInfo.setPreProcessorOutputExtension(StringUtils.trim(config.getString(typeKey+".remote."+remoteCounter+".preprocessor.output")));
                 info.getRemoteArtifacts().add(remoteInfo);
                 remoteCounter += 1;
             }
@@ -464,18 +668,40 @@ public abstract class DomainConfigCache <T extends DomainConfig> {
         }
     }
 
+    /**
+     * Parse all validation artifact information for the provided validation type and considering a default artifact type (if only one).
+     *
+     * @param rootKey The common key part.
+     * @param externalRootKey The common key part linked to external artifacts' configuration.
+     * @param externalCombinationKey The key part for the combination approach (default is combinationApproach).
+     * @param domainConfig The domain configuration to enrich.
+     * @param config The configuration properties.
+     */
     protected void addValidationArtifactInfo(String rootKey, String externalRootKey, String externalCombinationKey, DomainConfig domainConfig, Configuration config) {
         addValidationArtifactInfoForType(null, rootKey, externalRootKey, externalCombinationKey, domainConfig, config);
     }
 
+    /**
+     * Filter to select files based on their extension.
+     */
     private static class ExtensionFilter implements FilenameFilter {
 
         private String ext;
 
+        /**
+         * @param ext The extension.
+         */
         ExtensionFilter(String ext) {
             this.ext = ext;
         }
 
+        /**
+         * Check to see if the file matches.
+         *
+         * @param dir The processed directory.
+         * @param name The file name.
+         * @return True for a match.
+         */
         public boolean accept(File dir, String name) {
             return (name.endsWith(ext));
         }
